--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     main {
   display: flex;  
   margin: auto;
-  width: 50ch;
+  width: 100ch;
   height: 100vh;
   justify-content: flex-end;
   align-items: stretch;
@@ -43,14 +43,18 @@ body {
     }
 
     h1 {
-    font-size: 36px;
-    color: black;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      font-size: 36px;
+      color: black;
 
     footer {
       background: black;
       color: white;
       text-align: center;
       padding: 1em;
+      margin: -50px;
     }
 
   
