--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,9 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-
-      min-height: 100vh;
+      min-height: 100%;
+      margin-bottom: -50px;
+      
     }
 
     main {
@@ -48,13 +49,14 @@ body {
       justify-content: center;
       font-size: 36px;
       color: black;
-
-    footer {
+}
+    
+footer {
       background: black;
       color: white;
       text-align: center;
       padding: 1em;
-      margin: -50px;
+      
     }
 
   
