--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,13 @@
 body {
       margin: auto;
     }
+
     .wrapper {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      min-height: 100%;
-      margin-bottom: -50px;
-      
+
+      min-height: 100vh;
     }
 
     main {
@@ -34,7 +34,7 @@ body {
   background-size: cover;
   background-position: center;
 }
-    }
+    
     
     header {
       background: skyblue;
@@ -45,13 +45,12 @@ body {
 
     h1 {
       display: flex;
-      flex-direction: column;
+     
       justify-content: center;
       font-size: 36px;
       color: black;
 }
-    
-footer {
+    footer {
       background: grey;
       color: white;
       text-align: center;
